Fixed the Toggle Hamburger menu hiding behind the images using-->z-index.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,6 +19,7 @@
     }
     }
     .nav{
+        z-index:2;
         position:relative;
         background:#fff;
         padding:1.0625rem 1.5rem;
@@ -42,6 +43,7 @@
         }
     }
     &__toggle{
+        z-index:2;
         background:$White;
         padding: 1.625rem;
         margin:1.5rem 1.5rem;
@@ -106,6 +108,7 @@
 }
 
 .overlay {
+    z-index:1;
     display: block; //Fade-out animation isn't working! Replacing this with display:block so that, the toggle does not animates as well!
     position: fixed;
     top: 0px;
