--- a/scss/style.css
+++ b/scss/style.css
@@ -145,6 +145,7 @@ button:hover, .button:hover {
   transform: rotate(-45deg);
 }
 .header .nav {
+  z-index: 2;
   position: relative;
   background: #fff;
   padding: 1.0625rem 1.5rem;
@@ -161,6 +162,7 @@ button:hover, .button:hover {
   margin-bottom: 5px;
 }
 .header__toggle {
+  z-index: 2;
   background: hsl(0, 0%, 100%);
   padding: 1.625rem;
   margin: 1.5rem 1.5rem;
@@ -213,6 +215,7 @@ button:hover, .button:hover {
 }
 
 .overlay {
+  z-index: 1;
   display: block;
   position: fixed;
   top: 0px;
